# mlmm

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp
src/: Control.cpp  Control.h  InputParser.cpp  InputParser.h
src/impl/: Average_information_impl.cpp  Average_information_impl.h  Kinship_matrix_impl.cpp  Kinship_matrix_impl.h  My_linear_algebra_impl.cpp  My_linear_algebra_impl.h  Read_plink_file_impl.cpp  Read_plink_file_impl.h  emmax_impl.cpp  emmax_impl.h  emmax_impl_test.py  gemma_impl.cpp  gemma_impl.h  impl.h  mt_gemma_impl.cpp  mt_gemma_impl.h  my_math_impl.cpp  my_math_impl.h  phenotype_impl.cpp  phenotype_impl.h  phenotype_mul_impl.cpp  phenotype_mul_impl.h  test.ps
src/model/: Eigen_result.cpp  Eigen_result.h  Emma_result.cpp  Emma_result.h  Genotype.cpp  Genotype.h  Individual.cpp  Individual.h  My_Vector.h  My_matrix.h  Qr_decomposition_result.cpp  Qr_decomposition_result.h  Variant.cpp  Variant.h  model.h
src/service/: PerMutationTest.cpp  PerMutationTest.h  emmax_service.cpp  emmax_service.h  gemma_service.cpp  gemma_service.h  mt_gemma_service.cpp  mt_gemma_service.h  service.h
src/tests/impl/: My_linear_algebra_impl_test.cpp  Read_plink_file_impl_test.cpp  emmax_impl_test.cpp  my_math_impl_test.cpp  phenotype_impl.test.cpp
src/tests/service/: PermutationTest.cpp  emmax_service_test.cpp  gemma_service_test.cpp  mt_gemma_service_test.cpp
src/tests/testData/: gemma_phenotype  indel_snp_from_msa.tfam  indel_snp_from_msa.tped  orf.bed  orf.bim  orf.map  orf.ped  orf.tfam  orf.tped  phenotype.tfam  snp.aBN.kinf
src/util/: myutil.cpp  myutil.h  util.h
